refatorando seção sobre

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <img src="assets/img/img-personagem.svg" alt="Imagem personagem" class="header__img">
     </header>
 
-    <main class="aboutme" id="link-aboutme">
-        <img src="assets/img/eu.jpg" alt="Minha foto" class="aboutme-img">
+    <main class="sobre" id="link-aboutme">
+        <img src="assets/img/eu.jpg" alt="Minha foto" class="sobre-img">
 
-        <div class="aboutme__wrapper">
-            <article class="aboutme__text">
-                <h1 class="aboutme__title">SOBRE MIM</h1>
-                <h1 class="aboutme__city">São Paulo, Brasil</h1>
-                <p class="aboutme__description">Me chamo Jonathan, tenho 27 anos e hoje atuo como desenvolvedor Front-end. Sempre buscando conhecimento e aberto a novas experiências. Simpático, gentil e de bem com a vida, procurando agregar positivamente em qualquer ambiente em que estou presente.</p>
+        <div class="sobre__wrapper">
+            <article class="sobre__texto">
+                <h1 class="sobre__titulo">SOBRE MIM</h1>
+                <h1 class="sobre__cidade">São Paulo, Brasil</h1>
+                <p class="sobre__descricao">Me chamo Jonathan, tenho 27 anos e hoje atuo como desenvolvedor Front-end. Sempre buscando conhecimento e aberto a novas experiências. Simpático, gentil e de bem com a vida, procurando agregar positivamente em qualquer ambiente em que estou presente.</p>
             </article>
 
             <div class="aboutme__contact">
