--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
                 <a href="https://anime-psi.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
-                <img src="assets/img/landing.JPG" alt="" class="project__img">
-                <h1 class="project__name">Landing Page</h1>
-                <p class="project__description">Página feita utilizando o Bootstrap como tecnologia principal, com o objetivo de aprender a forma de utilização da ferramenta e como ela pode nos ajudar no dia a dia como desenvolvedor.</p>
+                <img src="assets/img/adopet.jpg" alt="" class="project__img">
+                <h1 class="project__name">Adopet</h1>
+                <p class="project__description">Adopet é uma plataforma fictícia para adoção de cães e gatos. Projeto desenvolvido na 4° edição do Challenge front end da Alura.</p>
                 <p class="project__tech">Tecnologias utilizadas no projeto</p>
                 <ul class="project__tech-list">
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>Bootstrap</li>
+                    <li>JavaScript</li>
                 </ul>
 
-                <a href="https://jonathanglopes.github.io/Landing-Page/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://adopet-liard.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
                 <img src="assets/img/form.JPG" alt="" class="project__img">
