--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <a href="https://adopet-liard.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
-                <img src="assets/img/form.JPG" alt="" class="project__img">
-                <h1 class="project__name">Formulário Login</h1>
-                <p class="project__description">Formulário desenvolvido com o objetivo de práticar formas de validação e exibição de mensagens de correto e incorreto através do form.<br><br></p>
+                <img src="assets/img/advice.JPG" alt="" class="project__img">
+                <h1 class="project__name">Gerador de conselhos</h1>
+                <p class="project__description">Uma aplicação que realiza o consumo de uma API para gerar conselhos aleatórios a cada vez que o usuário interage.<br><br></p>
                 <p class="project__tech">Tecnologias utilizadas no projeto</p>
                 <ul class="project__tech-list">
                     <li>HTML</li>
@@ -142,7 +142,7 @@
                     <li>JavaScript</li>
                 </ul>
 
-                <a href="https://jonathanglopes.github.io/Signup-form/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://advice-generator-eta-kohl.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
         </div>
     </section>
